--- a/app/src/main/res/layout/activity_profile4.xml
+++ b/app/src/main/res/layout/activity_profile4.xml
@@ -42,84 +42,84 @@
         android:id="@+id/githubTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/nameTextView"
+        android:layout_marginTop="6dp"
         android:text="GitHub: https://github.com/winteryy"
-        android:textStyle="italic"
-        android:textSize="20sp"
         android:textColor="#2A6FD5"
-        android:layout_marginTop="6dp" />
+        android:textSize="20sp"
+        android:textStyle="italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/nameTextView" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/blogTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/githubTextView"
+        android:layout_marginTop="6dp"
         android:text="Blog: https://winterry.tistory.com"
-        android:textStyle="italic"
         android:textColor="#830505"
         android:textSize="20sp"
-        android:layout_marginTop="6dp" />
+        android:textStyle="italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/githubTextView" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/birthDateTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/blogTextView"
+        android:layout_marginTop="30dp"
         android:text="생년월일: 1998.05.25"
         android:textSize="20sp"
-        android:layout_marginTop="30dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/blogTextView" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/dreamTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/birthDateTextView"
+        android:layout_marginTop="16dp"
         android:text="꿈: 건물주"
         android:textSize="20sp"
-        android:layout_marginTop="16dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/birthDateTextView" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/mbtiTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/dreamTextView"
+        android:layout_marginTop="16dp"
         android:text="MBTI: ISTP"
         android:textSize="20sp"
-        android:layout_marginTop="16dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/dreamTextView" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/msgTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/mbtiTextView"
-        app:layout_constraintBottom_toTopOf="@id/backButton"
         android:text="퍼포먼스와 직관성을 모두 챙기는\n우아한 코드를 작성하고 싶습니다!"
         android:textAlignment="center"
         android:textSize="20sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@id/backButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/mbtiTextView" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/backButton"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="20dp"
+        android:backgroundTint="@android:color/holo_red_dark"
         android:text="BACK"
         android:textColor="@color/white"
-        android:textStyle="bold"
         android:textSize="20sp"
-        android:backgroundTint="@android:color/holo_red_dark"
-        android:layout_marginBottom="20dp"/>
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
