--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,8 +59,9 @@
                     android:id="@+id/iv_1"
                     android:layout_width="match_parent"
                     android:layout_height="150dp"
-                    android:scaleType="fitXY"
-                    android:src="@mipmap/ic_launcher" />
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/bettor_profile"
+                    android:scaleY="-1"/>
 
             </androidx.cardview.widget.CardView>
 
