--- a/app/src/main/res/layout/activity_profile2.xml
+++ b/app/src/main/res/layout/activity_profile2.xml
@@ -5,8 +5,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#9dc7a7"
+    android:background="#f1f3f5"
     tools:context=".ProfileActivity2">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="스크롤을 밑으로 내려보세요!"
+        android:textSize="10sp"
+        app:layout_constraintBottom_toBottomOf="@+id/textView4"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cv_profile2"
@@ -148,7 +156,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/bmjua_ttf"
-                android:text="복권 당첨 되십쇼!"
+                android:text="우리 모두 화이팅!"
                 android:layout_gravity="center"
                 android:textColor="@color/black"
                 android:textSize="30sp" />
